--- a/index.html
+++ b/index.html
@@ -464,170 +464,168 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
-                    <button type="button" class="collapsible">Click for Item Identifier List</button>
-                    <div class="content">
-                      <ol>
-                        <li>Active_Boost</li>
-                        <li>Active_Grapple</li>
-                        <li>Active_Heal</li>
-                        <li>Active_Jump</li>
-                        <li>Active_Redirection</li>
-                        <li>Active_Shield</li>
-                        <li>Active_Slomo</li>
-                        <li>Active_SparkDash</li>
-                        <li>Active_TradeHpForBoost</li>
-                        <li>Active_TradeSpeedForHeal</li>
-                        <li>AutoPilot</li>
-                        <li>BecomeInvulnerableForAMomentOnPerfectLanding</li>
-                        <li>BlockDamageWithChance</li>
-                        <li>BlockDamageWithCooldown</li>
-                        <li>BoostPerMissingHealth</li>
-                        <li>BoostPerPerfectLandingStreak</li>
-                        <li>BoostPerSpark</li>
-                        <li>ChanceForFullHP</li>
-                        <li>CloseCallBoost</li>
-                        <li>CloseCallCooldown</li>
-                        <li>CloseCallEcho</li>
-                        <li>CloseCallEnergy</li>
-                        <li>CloseCallHeal</li>
-                        <li>CloseCallInv</li>
-                        <li>CloseCallLuck</li>
-                        <li>CloseCallSave</li>
-                        <li>CooldownReductionOnPerfectLanding</li>
-                        <li>CooldownReductionPerBoost</li>
-                        <li>CooldownReductionWithCooldown</li>
-                        <li>GetBoostAtFullHealth</li>
-                        <li>GetBoostOnHeal</li>
-                        <li>GetBoostWhenTakeDamage</li>
-                        <li>GetBoostWithCooldown</li>
-                        <li>GetEnergyWithCooldown</li>
-                        <li>GetHealedOnPerfectLanding</li>
-                        <li>GetHealthWhenTakeDamage</li>
-                        <li>HealthRegenAtAlmostFullHealth</li>
-                        <li>LuckPerMissingHealth</li>
-                        <li>MaxHealthButDieOnOkOrBadLanding</li>
-                        <li>NEW_Active_HealWhenTakeDamage</li>
-                        <li>NEW_Active_KillObstacles</li>
-                        <li>NEW_Active_KillObstaclesPulse</li>
-                        <li>NEW_Active_StickToGround</li>
-                        <li>NEW_Active_Teleport</li>
-                        <li>NEW_Active_TempSpeed</li>
-                        <li>NEW_BigEffectOnSlowSpeed</li>
-                        <li>NEW_BoostIfLastLandingWasPerfect</li>
-                        <li>NEW_EnergyOnRunning</li>
-                        <li>NEW_HealOnRunning</li>
-                        <li>NEW_HealPerEnergyUsed</li>
-                        <li>NEW_InvuPerEnergyUsed</li>
-                        <li>NEW_OnSparkPickupBigEffect</li>
-                        <li>NEW_Phoenix</li>
-                        <li>NEW_PlaceRingInFront</li>
-                        <li>NEW_RegenIfLastLandingWasPerfect</li>
-                        <li>NEW_RegenWithSpeed_Threshold</li>
-                        <li>NEW_RewindOnDamage</li>
-                        <li>NEW_SparksOnRunning</li>
-                        <li>NEW_StartWithBoost</li>
-                        <li>NEW_StartWithEnergy</li>
-                        <li>NEW_StartWithHeal</li>
-                        <li>NEW_StartWithMoney</li>
-                        <li>OnGetCoin_Boost</li>
-                        <li>OnGetCoin_Energy</li>
-                        <li>OnGetCoin_Heal</li>
-                        <li>OnGetCoin_Invuln</li>
-                        <li>PermanentBoost</li>
-                        <li>RandomChanceToBoostOnPerfectLanding</li>
-                        <li>RandomChanceToGetLuck</li>
-                        <li>RandomChanceToRegen</li>
-                        <li>RandomChanceToSaveNonPerfectLanding</li>
-                        <li>Regen</li>
-                        <li>RegenerationPerBoost</li>
-                        <li>RegenPercent</li>
-                        <li>RegenPerMissingHealth</li>
-                        <li>SaveANonPerfectLandingWithCooldown</li>
-                        <li>SparksChanceOnPerfectLanding</li>
-                        <li>SparksChanceOverTime</li>
-                        <li>SparksOnPerfectLanding</li>
-                        <li>SparksOverTime</li>
-                        <li>SparksOverTimeDamageOnPickUp</li>
-                        <li>Stats_CoinPickupRange</li>
-                        <li>Stats_Luck</li>
-                        <li>Stats_LuckOnFullHealth</li>
-                        <li>Stats_MaxHealthFlat</li>
-                        <li>Stats_MaxHealthMultiply</li>
-                        <li>Stats_MaxHealthOnSpeed</li>
-                        <li>Stats_SparkInLevel</li>
-                        <li>Stats_SparkOnTakeDamage</li>
-                        <li>TakeDamageOnBadLandingButGetPermanentBoost</li>
-                        <li>TakeDamageOnCloseCallButGetPermanentBoost</li>
-                        <li>MinorItem</li>
-                        <li>MinorItem_Captain_ActualProtection</li>
-                        <li>MinorItem_Captain_CaptainCautious</li>
-                        <li>MinorItem_Captain_CaptainInspired</li>
-                        <li>MinorItem_Captain_CaptainPrecisionFocus</li>
-                        <li>MinorItem_Captain_CaptainsEncouragement</li>
-                        <li>MinorItem_Captain_CaptainsFootsteps</li>
-                        <li>MinorItem_Captain_CaptainsLifeLesson</li>
-                        <li>MinorItem_Captain_CaptainSpeedFocus</li>
-                        <li>MinorItem_Captain_CaptainsRaid</li>
-                        <li>MinorItem_Captain_ConditionalProtection</li>
-                        <li>MinorItem_Captain_FlotationDevice</li>
-                        <li>MinorItem_Captain_NeverStop_1</li>
-                        <li>MinorItem_Captain_NeverStop_2</li>
-                        <li>MinorItem_Captain_SecretTrainingRegimen_1</li>
-                        <li>MinorItem_Captain_SecretTrainingRegimen_2</li>
-                        <li>MinorItem_Captain_ThursdayHat</li>
-                        <li>MinorItem_EyeForValue</li>
-                        <li>MinorItem_SelfPreservation</li>
-                        <li>MinorItem_SparkDiscoveries</li>
-                        <li>MinorItem_Heir_AerodynamicPractice</li>
-                        <li>MinorItem_Heir_Agility</li>
-                        <li>MinorItem_Heir_BalanceTraining</li>
-                        <li>MinorItem_Heir_CrushingExercise</li>
-                        <li>MinorItem_Heir_DefenseTraining</li>
-                        <li>MinorItem_Heir_IntenseExercise</li>
-                        <li>MinorItem_Heir_Prudence</li>
-                        <li>MinorItem_Heir_ResistanceTraining</li>
-                        <li>MinorItem_Heir_RiskTaker</li>
-                        <li>MinorItem_Heir_RiskTakerCost</li>
-                        <li>MinorItem_Heir_Shortcut</li>
-                        <li>MinorItem_Heir_ShortcutCost</li>
-                        <li>MinorItem_Heir_SparkPractice</li>
-                        <li>MinorItem_Researcher_Action</li>
-                        <li>MinorItem_Researcher_AncientGravitron</li>
-                        <li>MinorItem_Researcher_AncientSlingshot</li>
-                        <li>MinorItem_Researcher_BoostTheorem</li>
-                        <li>MinorItem_Researcher_HarshReality</li>
-                        <li>MinorItem_Researcher_HealthMachine</li>
-                        <li>MinorItem_Researcher_OverchargeHarness</li>
-                        <li>MinorItem_Researcher_OverchargeHarnessCost</li>
-                        <li>MinorItem_Researcher_Reaction</li>
-                        <li>MinorItem_Researcher_SpeedOfTime</li>
-                        <li>MinorItem_Researcher_Support</li>
-                        <li>MinorItem_Researcher_ThisShallPass</li>
-                        <li>MinorItem_Researcher_UnclearExistence</li>
-                        <li>MinorItem_Researcher_UnstableConsequences</li>
-                        <li>MinorItem_Researcher_UnstableInvention</li>
-                        <li>MinorItem_AerialLessons</li>
-                        <li>MinorItem_GardenRoots</li>
-                        <li>MinorItem_ImprovisedPoncho</li>
-                        <li>MinorItem_LookingForExcellence</li>
-                        <li>MinorItem_MemoriesOfThePast</li>
-                        <li>MinorItem_SageSupport</li>
-                        <li>MinorItem_UnknowableFuture</li>
-                        <li>MinorItem_WraithLightness</li>
-                        <li>MinorItem_WraithLightness2</li>
-                        <li>MinorItem_WraithRecharged</li>
-                        <li>MinorItem_WraithSolidity</li>
-                        <li>MinorItem_WraithSolidity2</li>
-                        <li>MinorItem_Wraith_BreathingExercises</li>
-                        <li>MinorItem_Wraith_ButterflyLunge</li>
-                        <li>MinorItem_Wraith_ButterflySpin</li>
-                        <li>MinorItem_Wraith_ConnectionToTheBeyond</li>
-                        <li>MinorItem_Wraith_JustOutOfSight</li>
-                        <li>MinorItem_Wraith_LightenedHeart</li>
-                        <li>MinorItem_Wraith_MatterFromEnergy</li>
-                        <li>MinorItem_Wraith_SharedSearch</li>
-                      </ol>
-                    </div></td>
+                    <details>
+                      <summary>Click to view item identifier list</summary>
+                      <p>Active_Boost</p>
+                      <p>Active_Grapple</p>
+                      <p>Active_Heal</p>
+                      <p>Active_Jump</p>
+                      <p>Active_Redirection</p>
+                      <p>Active_Shield</p>
+                      <p>Active_Slomo</p>
+                      <p>Active_SparkDash</p>
+                      <p>Active_TradeHpForBoost</p>
+                      <p>Active_TradeSpeedForHeal</p>
+                      <p>AutoPilot</p>
+                      <p>BecomeInvulnerableForAMomentOnPerfectLanding</p>
+                      <p>BlockDamageWithChance</p>
+                      <p>BlockDamageWithCooldown</p>
+                      <p>BoostPerMissingHealth</p>
+                      <p>BoostPerPerfectLandingStreak</p>
+                      <p>BoostPerSpark</p>
+                      <p>ChanceForFullHP</p>
+                      <p>CloseCallBoost</p>
+                      <p>CloseCallCooldown</p>
+                      <p>CloseCallEcho</p>
+                      <p>CloseCallEnergy</p>
+                      <p>CloseCallHeal</p>
+                      <p>CloseCalpnv</p>
+                      <p>CloseCallLuck</p>
+                      <p>CloseCallSave</p>
+                      <p>CooldownReductionOnPerfectLanding</p>
+                      <p>CooldownReductionPerBoost</p>
+                      <p>CooldownReductionWithCooldown</p>
+                      <p>GetBoostAtFullHealth</p>
+                      <p>GetBoostOnHeal</p>
+                      <p>GetBoostWhenTakeDamage</p>
+                      <p>GetBoostWithCooldown</p>
+                      <p>GetEnergyWithCooldown</p>
+                      <p>GetHealedOnPerfectLanding</p>
+                      <p>GetHealthWhenTakeDamage</p>
+                      <p>HealthRegenAtAlmostFullHealth</p>
+                      <p>LuckPerMissingHealth</p>
+                      <p>MaxHealthButDieOnOkOrBadLanding</p>
+                      <p>NEW_Active_HealWhenTakeDamage</p>
+                      <p>NEW_Active_KillObstacles</p>
+                      <p>NEW_Active_KillObstaclesPulse</p>
+                      <p>NEW_Active_StickToGround</p>
+                      <p>NEW_Active_Teleport</p>
+                      <p>NEW_Active_TempSpeed</p>
+                      <p>NEW_BigEffectOnSlowSpeed</p>
+                      <p>NEW_BoostIfLastLandingWasPerfect</p>
+                      <p>NEW_EnergyOnRunning</p>
+                      <p>NEW_HealOnRunning</p>
+                      <p>NEW_HealPerEnergyUsed</p>
+                      <p>NEW_InvuPerEnergyUsed</p>
+                      <p>NEW_OnSparkPickupBigEffect</p>
+                      <p>NEW_Phoenix</p>
+                      <p>NEW_PlaceRingInFront</p>
+                      <p>NEW_RegenIfLastLandingWasPerfect</p>
+                      <p>NEW_RegenWithSpeed_Threshold</p>
+                      <p>NEW_RewindOnDamage</p>
+                      <p>NEW_SparksOnRunning</p>
+                      <p>NEW_StartWithBoost</p>
+                      <p>NEW_StartWithEnergy</p>
+                      <p>NEW_StartWithHeal</p>
+                      <p>NEW_StartWithMoney</p>
+                      <p>OnGetCoin_Boost</p>
+                      <p>OnGetCoin_Energy</p>
+                      <p>OnGetCoin_Heal</p>
+                      <p>OnGetCoin_Invuln</p>
+                      <p>PermanentBoost</p>
+                      <p>RandomChanceToBoostOnPerfectLanding</p>
+                      <p>RandomChanceToGetLuck</p>
+                      <p>RandomChanceToRegen</p>
+                      <p>RandomChanceToSaveNonPerfectLanding</p>
+                      <p>Regen</p>
+                      <p>RegenerationPerBoost</p>
+                      <p>RegenPercent</p>
+                      <p>RegenPerMissingHealth</p>
+                      <p>SaveANonPerfectLandingWithCooldown</p>
+                      <p>SparksChanceOnPerfectLanding</p>
+                      <p>SparksChanceOverTime</p>
+                      <p>SparksOnPerfectLanding</p>
+                      <p>SparksOverTime</p>
+                      <p>SparksOverTimeDamageOnPickUp</p>
+                      <p>Stats_CoinPickupRange</p>
+                      <p>Stats_Luck</p>
+                      <p>Stats_LuckOnFullHealth</p>
+                      <p>Stats_MaxHealthFlat</p>
+                      <p>Stats_MaxHealthMultiply</p>
+                      <p>Stats_MaxHealthOnSpeed</p>
+                      <p>Stats_SparkInLevel</p>
+                      <p>Stats_SparkOnTakeDamage</p>
+                      <p>TakeDamageOnBadLandingButGetPermanentBoost</p>
+                      <p>TakeDamageOnCloseCallButGetPermanentBoost</p>
+                      <p>MinorItem</p>
+                      <p>MinorItem_Captain_ActualProtection</p>
+                      <p>MinorItem_Captain_CaptainCautious</p>
+                      <p>MinorItem_Captain_CaptainInspired</p>
+                      <p>MinorItem_Captain_CaptainPrecisionFocus</p>
+                      <p>MinorItem_Captain_CaptainsEncouragement</p>
+                      <p>MinorItem_Captain_CaptainsFootsteps</p>
+                      <p>MinorItem_Captain_CaptainspfeLesson</p>
+                      <p>MinorItem_Captain_CaptainSpeedFocus</p>
+                      <p>MinorItem_Captain_CaptainsRaid</p>
+                      <p>MinorItem_Captain_ConditionalProtection</p>
+                      <p>MinorItem_Captain_FlotationDevice</p>
+                      <p>MinorItem_Captain_NeverStop_1</p>
+                      <p>MinorItem_Captain_NeverStop_2</p>
+                      <p>MinorItem_Captain_SecretTrainingRegimen_1</p>
+                      <p>MinorItem_Captain_SecretTrainingRegimen_2</p>
+                      <p>MinorItem_Captain_ThursdayHat</p>
+                      <p>MinorItem_EyeForValue</p>
+                      <p>MinorItem_SelfPreservation</p>
+                      <p>MinorItem_SparkDiscoveries</p>
+                      <p>MinorItem_Heir_AerodynamicPractice</p>
+                      <p>MinorItem_Heir_Agipty</p>
+                      <p>MinorItem_Heir_BalanceTraining</p>
+                      <p>MinorItem_Heir_CrushingExercise</p>
+                      <p>MinorItem_Heir_DefenseTraining</p>
+                      <p>MinorItem_Heir_IntenseExercise</p>
+                      <p>MinorItem_Heir_Prudence</p>
+                      <p>MinorItem_Heir_ResistanceTraining</p>
+                      <p>MinorItem_Heir_RiskTaker</p>
+                      <p>MinorItem_Heir_RiskTakerCost</p>
+                      <p>MinorItem_Heir_Shortcut</p>
+                      <p>MinorItem_Heir_ShortcutCost</p>
+                      <p>MinorItem_Heir_SparkPractice</p>
+                      <p>MinorItem_Researcher_Action</p>
+                      <p>MinorItem_Researcher_AncientGravitron</p>
+                      <p>MinorItem_Researcher_AncientSpngshot</p>
+                      <p>MinorItem_Researcher_BoostTheorem</p>
+                      <p>MinorItem_Researcher_HarshReapty</p>
+                      <p>MinorItem_Researcher_HealthMachine</p>
+                      <p>MinorItem_Researcher_OverchargeHarness</p>
+                      <p>MinorItem_Researcher_OverchargeHarnessCost</p>
+                      <p>MinorItem_Researcher_Reaction</p>
+                      <p>MinorItem_Researcher_SpeedOfTime</p>
+                      <p>MinorItem_Researcher_Support</p>
+                      <p>MinorItem_Researcher_ThisShallPass</p>
+                      <p>MinorItem_Researcher_UnclearExistence</p>
+                      <p>MinorItem_Researcher_UnstableConsequences</p>
+                      <p>MinorItem_Researcher_UnstableInvention</p>
+                      <p>MinorItem_AerialLessons</p>
+                      <p>MinorItem_GardenRoots</p>
+                      <p>MinorItem_ImprovisedPoncho</p>
+                      <p>MinorItem_LookingForExcellence</p>
+                      <p>MinorItem_MemoriesOfThePast</p>
+                      <p>MinorItem_SageSupport</p>
+                      <p>MinorItem_UnknowableFuture</p>
+                      <p>MinorItem_Wraithpghtness</p>
+                      <p>MinorItem_Wraithpghtness2</p>
+                      <p>MinorItem_WraithRecharged</p>
+                      <p>MinorItem_WraithSopdity</p>
+                      <p>MinorItem_WraithSopdity2</p>
+                      <p>MinorItem_Wraith_BreathingExercises</p>
+                      <p>MinorItem_Wraith_ButterflyLunge</p>
+                      <p>MinorItem_Wraith_ButterflySpin</p>
+                      <p>MinorItem_Wraith_ConnectionToTheBeyond</p>
+                      <p>MinorItem_Wraith_JustOutOfSight</p>
+                      <p>MinorItem_Wraith_pghtenedHeart</p>
+                      <p>MinorItem_Wraith_MatterFromEnergy</p>
+                      <p>MinorItem_Wraith_SharedSearch</p>
+                    </details></td>
                   <td class="s9" dir="ltr">Runs a conversation with an NPC</td>
               </tr>
               <tr style="height: 20px;">
