--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
                     <select style="scrollbar-thumb-color: blue; scrollbar-track-color: red;">
-                      <option disabled="true" selected="true">Items</option>
+                      <option disabled selected hidden>Items</option>
                       <option disabled="true">Active_Boost</option>
                       <option disabled="true">Active_Grapple</option>
                       <option disabled="true">Active_Heal</option>
