--- a/index.html
+++ b/index.html
@@ -425,8 +425,7 @@
       .ritz .waffle .s12 select {
         background-color: #a26ba8;
         color: #000001;
-        scrollbar-color: red blue;
-        scrollbar-width: thin;
+        width: absolute;
       }
 
       .ritz .waffle .s12 select option:disabled {
@@ -438,8 +437,7 @@
       .ritz .waffle .s20 select {
         background-color: #a26ba8;
         color: #000001;
-        scrollbar-color: red blue;
-        scrollbar-width: thin;
+        width: absolute;
       }
 
       .ritz .waffle .s20 select option:disabled {
