--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
       }
 
       .ritz .waffle .s12 select {
-        background-color: #a26ba8;
+        background-color: #a26ba0;
         color: #000001;
-        width: absolute;
+        width: 100%;
       }
 
       .ritz .waffle .s12 select option:disabled {
@@ -435,9 +435,9 @@
       }
 
       .ritz .waffle .s20 select {
-        background-color: #a26ba8;
+        background-color: #a26ba0;
         color: #000001;
-        width: absolute;
+        width: 100%;
       }
 
       .ritz .waffle .s20 select option:disabled {
