--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
         background-color: #a26ba8;
         opacity: 1;
         color: #000000;
+        width: 100%;
       }
 
       .ritz .waffle .s20 select {
@@ -444,6 +445,7 @@
         background-color: #a26ba8;
         opacity: 1;
         color: #000000;
+        width: 100%;
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
