--- a/index.html
+++ b/index.html
@@ -428,6 +428,13 @@
         width: 100%;
       }
 
+      .ritz .waffle .s20 select option {
+        background-color: #a26ba8;
+        opacity: 1;
+        color: #000000;
+        width: 100%;
+      }
+
       .ritz .waffle .s12 select option:disabled {
         background-color: #a26ba8;
         opacity: 1;
@@ -438,6 +445,13 @@
       .ritz .waffle .s20 select {
         background-color: #a26ba0;
         color: #000001;
+        width: 100%;
+      }
+
+      .ritz .waffle .s20 select option {
+        background-color: #a26ba8;
+        opacity: 1;
+        color: #000000;
         width: 100%;
       }
 
