--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
         background-color: #a26ba0;
         color: #000001;
         width: 100%;
+        whitespace: nowrap;
       }
 
       .ritz .waffle .s20 select option {
@@ -446,6 +447,7 @@
         background-color: #a26ba0;
         color: #000001;
         width: 100%;
+        whitespace: nowrap;
       }
 
       .ritz .waffle .s20 select option {
