--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
         opacity: 1;
         color: #000000;
         width: 100%;
+        whitespace: nowrap;
       }
 
       .ritz .waffle .s12 select option:disabled {
@@ -441,6 +442,7 @@
         opacity: 1;
         color: #000000;
         width: 100%;
+        whitespace: nowrap;
       }
 
       .ritz .waffle .s20 select {
@@ -455,6 +457,7 @@
         opacity: 1;
         color: #000000;
         width: 100%;
+        whitespace: nowrap;
       }
 
       .ritz .waffle .s20 select option:disabled {
@@ -462,6 +465,7 @@
         opacity: 1;
         color: #000000;
         width: 100%;
+        whitespace: nowrap;
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
