--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,7 @@
                       <option disabled>in_run</option>
                       <option disabled>started_run_this_session</option>
                       <option disabled>currently_unlocking_ability_cost</option>
-                      <option disabled>pool_cooldown_(pool</option>
-                      <option disabled>object)</option>
+                      <option disabled>pool_cooldown_(pool object)</option>
                       <option disabled>(item)_ShowItem</option>
                       <option disabled>current_run_shard</option>
                       <option disabled>successive_wins</option>
@@ -1180,8 +1179,7 @@
                       <option disabled>last_run_was_win</option>
                       <option disabled>last_run_was_loss</option>
                       <option disabled>current_run_progress</option>
-                      <option disabled>TutorialPopUp_Played_(tutorial</option>
-                      <option disabled>id)</option>
+                      <option disabled>TutorialPopUp_Played_(tutorial id)</option>
                       <option disabled>Has_Won_Game</option>
                       <option disabled>Credits_Shown</option>
                       <option disabled>endless_unlocked</option>
