--- a/index.html
+++ b/index.html
@@ -468,6 +468,11 @@
         whitespace: nowrap;
       }
   </style>
+
+  <head>
+    Hello World!
+  </head>
+  
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
           <tbody style="background-color:#3b4563;">
