--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
       }
   </style>
 
-  <head style="padding:2px 0px 0px 0px">
+  <dive style="padding: 2 0 0 0">
     Hello World!
-  </head>
+  </div>
   
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
