--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
   </style>
 
   <div style="padding: 2 0 0 0">
-    Method Colors Legend: (<div class="color-box" style="color: red; width: 10px; height: 10px;"></div>Methods relating to health | <div class="color-box" style="color: green"></div>Methods relating to currency | <div class="color-box" style="color: sky-blue"></div>Methods relating to fragments | <div class="color-box" style="color: deep-blue"></div>Methods relating to shards | <div class="color-box" style="color: yellow"></div>Methods relating to energy | <div class="color-box" style="color: orange"></div>Self-contained Relations)
+    Method Colors Legend: (<div class="color-box" style="background-color: red; width: 10px; height: 10px;"></div>Methods relating to health | <div class="color-box" style="color: green"></div>Methods relating to currency | <div class="color-box" style="color: sky-blue"></div>Methods relating to fragments | <div class="color-box" style="color: deep-blue"></div>Methods relating to shards | <div class="color-box" style="color: yellow"></div>Methods relating to energy | <div class="color-box" style="color: orange"></div>Self-contained Relations)
   </div>
   
   <div class="ritz grid-container" dir="ltr">
