--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
       }
   </style>
 
-  <div style="padding: 0 0 0 4; font-family: sans-serif; color: white; vertical-align: bottom; whitespace: nowrap">
+  <div style="padding: 0 0 0 4; font-family: sans-serif; color: white; vertical-align: bottom; whitespace: nowrap; font-weight: bold">
     Method Colors Legend: (<div class="color-box" style="background-color: #ff2828; width: 15px; height: 15px;"></div>Methods relating to health | <div class="color-box" style="background-color: #00ff00; width: 15px; height: 15px;"></div>Methods relating to currency | <div class="color-box" style="background-color: #00ffff; width: 15px; height: 15px;"></div>Methods relating to fragments | <div class="color-box" style="background-color: #3030ff; width: 15px; height: 15px;"></div>Methods relating to shards | <div class="color-box" style="background-color: #ffff00; width: 15px; height: 15px;"></div>Methods relating to energy | <div class="color-box" style="color: orange; width: 15px; height: 15px;"></div>Self-contained Relations)
   </div>
   
