--- a/index.html
+++ b/index.html
@@ -470,19 +470,19 @@
   </style>
 
   <div style="padding: 0 0 0 4; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
-    Method Colors Legend:
-    <div class="color-box" style="background-color: #ff2828; width: 15px; height: 15px; display: inline-block"></div>
-    Methods relating to health | 
-    <div class="color-box" style="background-color: #00ff00; width: 15px; height: 15px; display: inline-block"></div>
-    Methods relating to currency | 
-    <div class="color-box" style="background-color: #00ffff; width: 15px; height: 15px; display: inline-block"></div>
-    Methods relating to fragments | 
-    <div class="color-box" style="background-color: #3030ff; width: 15px; height: 15px; display: inline-block"></div>
-    Methods relating to shards | 
-    <div class="color-box" style="background-color: #ffff00; width: 15px; height: 15px; display: inline-block"></div>
-    Methods relating to energy | 
-    <div class="color-box" style="background-color: orange; width: 15px; height: 15px; display: inline-block"></div>
-    Self-contained Relations
+    Method Colors Legend:  (
+    <div class="color-box" style="background-color: #ff2828; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Methods relating to health  |  
+    <div class="color-box" style="background-color: #00ff00; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Methods relating to currency  |  
+    <div class="color-box" style="background-color: #00ffff; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Methods relating to fragments  |  
+    <div class="color-box" style="background-color: #3030ff; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Methods relating to shards  |  
+    <div class="color-box" style="background-color: #ffff00; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Methods relating to energy  |  
+    <div class="color-box" style="background-color: orange; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
+    Self-contained Relations)
   </div>
   
   <div class="ritz grid-container" dir="ltr">
