--- a/index.html
+++ b/index.html
@@ -472,15 +472,15 @@
   <div style="padding: 0 0 0 4; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
     Method Colors Legend:  (
     <div class="color-box" style="background-color: #ff2828; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to health <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px"></hr>
+    Methods relating to health <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px; display: inline-block"></hr>
     <div class="color-box" style="background-color: #00ff00; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to currency <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px"></hr>
+    Methods relating to currency <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px; display: inline-block"></hr>
     <div class="color-box" style="background-color: #00ffff; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to fragments <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px"></hr>
+    Methods relating to fragments <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px; display: inline-block"></hr>
     <div class="color-box" style="background-color: #3030ff; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to shards <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px"></hr>
+    Methods relating to shards <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px; display: inline-block"></hr>
     <div class="color-box" style="background-color: #ffff00; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to energy <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px"></hr>
+    Methods relating to energy <hr style="height: 100%; width: 7px; margin-left: 5px; margin-right: 5px; display: inline-block"></hr>
     <div class="color-box" style="background-color: orange; width: 15px; height: 15px; display: inline-block; padding: 0 0 0 0"></div>
     Self-contained Relations)
   </div>
