--- a/index.html
+++ b/index.html
@@ -498,6 +498,11 @@
                   <td class="s3" dir="ltr" style="text-align: center;">OPTIONS</td>
                   <td class="s4" dir="ltr">DESCRIPTION</td>
               </tr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa">Open the console with F1</p>
+              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa; display: inline-block">Command structure: (command).(method) (variables)</p>
+              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa; display: inline-block">Options are the choices you have for the variable parameter</p>
               <tr>
                   <th style="height:3px;" class="freezebar-cell freezebar-horizontal-handle"><br></th>
                   <td class="freezebar-cell"><br></td>
@@ -785,7 +790,7 @@
                       <option disabled>SageSide03</option>
                       <option disabled>SageSide04</option>
                     </select></td>
-                  <td class="s9" dir="ltr">Runs a conversation with an NPC</td>
+                  <td class="s9" dir="ltr">Runs the specified conversation with an NPC</td>
               </tr>
               <tr style="height: 20px;">
                   <th id="0R3" style="height: 20px;" class="row-headers-background">
@@ -980,7 +985,7 @@
                       <option disabled>MinorItem_Wraith_MatterFromEnergy</option>
                       <option disabled>MinorItem_Wraith_SharedSearch</option>
                     </select></td>
-                  <td class="s9" dir="ltr">Adds an item to your inventory</td>
+                  <td class="s9" dir="ltr">Adds the specified item to your inventory</td>
               </tr>
               <tr style="height: 20px;">
                   <th id="0R6" style="height: 20px;" class="row-headers-background">
