--- a/index.html
+++ b/index.html
@@ -498,11 +498,6 @@
                   <td class="s3" dir="ltr" style="text-align: center;">OPTIONS</td>
                   <td class="s4" dir="ltr">DESCRIPTION</td>
               </tr>
-              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa">Open the console with F1</p>
-              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa; display: inline-block">Command structure: (command).(method) (variables)</p>
-              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #aaaaaa; display: inline-block">Options are the choices you have for the variable parameter</p>
               <tr>
                   <th style="height:3px;" class="freezebar-cell freezebar-horizontal-handle"><br></th>
                   <td class="freezebar-cell"><br></td>
@@ -512,6 +507,11 @@
                   <td class="freezebar-cell"><br></td>
                   <td class="freezebar-cell"><br></td>
               </tr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Open the console with F1</p>
+              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Command structure: (command).(method) (variables)</p>
+              <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+              <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Options are the choices you have for the variable parameter</p>
               <tr style="height: 20px;">
                   <th id="0R1" style="height: 20px;" class="row-headers-background">
                       <div class="row-header-wrapper" style="line-height: 20px;"><br></div>
