--- a/index.html
+++ b/index.html
@@ -500,12 +500,12 @@
               </tr>
               <tr>
                   <th style="height:3px;" class="freezebar-cell freezebar-horizontal-handle"><br></th>
-                  <td class="freezebar-cell" style="width: 100%">
-                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Open the console with F1</p>
+                  <td class="freezebar-cell" style="width: 100%" colspan="6">
+                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; margin-top: 0px; margin-bottom: 0px; color: #cccccc; display: inline-block">Open the console with F1</p>
                     <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Command structure: (command).(method) (variables)</p>
+                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; margin-top: 0px; margin-bottom: 0px; color: #cccccc; display: inline-block">Command structure: (command).(method) (variables)</p>
                     <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; color: #cccccc; display: inline-block">Options are the choices you have for the variable parameter</p>
+                    <p style="font-family: sans-serif; padding: 0 0 0 4; margin-left: 0px; margin-right: 0px; margin-top: 0px; margin-bottom: 0px; color: #cccccc; display: inline-block">Options are the choices you have for the variable parameter</p>
                   </td>
               </tr>
               
