--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <style type="text/css">
       .ritz .waffle a {
           color: inherit;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s12 {
@@ -18,6 +19,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s15 {
@@ -30,6 +32,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s26 {
@@ -42,6 +45,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s4 {
@@ -55,6 +59,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s32 {
@@ -67,6 +72,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s22 {
@@ -79,6 +85,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s21 {
@@ -91,6 +98,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s30 {
@@ -103,6 +111,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s18 {
@@ -115,6 +124,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s31 {
@@ -127,6 +137,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s10 {
@@ -139,6 +150,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s16 {
@@ -151,6 +163,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s13 {
@@ -163,6 +176,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s17 {
@@ -175,6 +189,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s0 {
@@ -188,6 +203,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s33 {
@@ -200,6 +216,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s2 {
@@ -213,6 +230,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s25 {
@@ -225,6 +243,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s24 {
@@ -237,6 +256,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s27 {
@@ -249,6 +269,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s28 {
@@ -261,6 +282,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s1 {
@@ -274,6 +296,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s29 {
@@ -286,6 +309,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s8 {
@@ -298,6 +322,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s14 {
@@ -310,6 +335,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s23 {
@@ -322,6 +348,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s9 {
@@ -335,6 +362,7 @@
           overflow: hidden;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s7 {
@@ -347,6 +375,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s11 {
@@ -359,6 +388,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s20 {
@@ -371,6 +401,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s6 {
@@ -383,6 +414,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s5 {
@@ -395,6 +427,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s3 {
@@ -408,6 +441,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s19 {
@@ -420,6 +454,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
+          border-radius: 8px;
       }
 
       .ritz .waffle .s12 select {
@@ -427,6 +462,7 @@
         color: #000001;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
 
       .ritz .waffle .s20 select option {
@@ -435,6 +471,7 @@
         color: #000000;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
 
       .ritz .waffle .s12 select option:disabled {
@@ -443,6 +480,7 @@
         color: #000000;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
 
       .ritz .waffle .s20 select {
@@ -450,6 +488,7 @@
         color: #000001;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
 
       .ritz .waffle .s20 select option {
@@ -458,6 +497,7 @@
         color: #000000;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
 
       .ritz .waffle .s20 select option:disabled {
@@ -466,6 +506,7 @@
         color: #000000;
         width: 100%;
         whitespace: nowrap;
+        border-radius: 8px;
       }
   </style>
 
